fixed biuld issues

--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -356,18 +356,18 @@ While the process ends naturally when no new contexts are uncovered from the pre
 		\item harvesting content and creating context networks
 		\begin{itemize}
 		    \item table of each event harvested together with a description (like on report 10)
-		    \item table for each event describing the related graphs (#nodes, #edges, avg weighted degree)
+		    \item table for each event describing the related graphs (\#nodes, \#edges, avg weighted degree)
 		\end{itemize}
 		\item community detection:
 		\begin{itemize}
-		    \item describe the avg # of nodes per community, avg # of edges per community, avg # of users that belongs to more than one community(?)
+		    \item describe the avg \# of nodes per community, avg \# of edges per community, avg \# of users that belongs to more than one community(?)
 		    \item partition qualities avg: internal density, avg degree, FOMD, cut ratio and expansion (chosen because more suitable for overlapping commmunity detection algorithms https://github.com/Lab41/survey-community-detection)
 		\end{itemize}
 		\item User selection and ranking:
 		\begin{itemize}
 		    \item feature 2-3 different ranking functions
-		    \item briefly describe the number inside functions (example: the # of events a user is in, the # of communities a user is in, indegree cetrality)
-		    \item decide over a method for comparison for the functions (list top-k users for each function and look for them over twitter, check how selective are and the diagram wrt #users)
+		    \item briefly describe the number inside functions (example: the \# of events a user is in, the \# of communities a user is in, indegree cetrality)
+		    \item decide over a method for comparison for the functions (list top-k users for each function and look for them over twitter, check how selective are and the diagram wrt \#users)
 		\end{itemize}
 		\item new context discovery (?)
 	\end{itemize}
